package edu.austral.ingsis.math;

public interface Function extends Visitable {
  double solve();
}
