package edu.austral.ingsis.math.functioncomposites;

import edu.austral.ingsis.math.visitors.Visitor;

public class Multiplication implements Operation {
    @Override
    public String getSymbol() {
        return null;
    }

    @Override
    public void accept(Visitor visitor) {

    }
}
