package edu.austral.ingsis.math.functioncomposites.binary.solvers;

import edu.austral.ingsis.math.Function;

public interface BinarySolver {
  double solve(Function function1, Function function2);
}
