package edu.austral.ingsis.math.functioncomposites.unary.solvers;

import edu.austral.ingsis.math.Function;

public interface UnarySolver {
  double solve(Function function);
}
