package edu.austral.ingsis.math.functionleafs;

import edu.austral.ingsis.math.Function;

public interface Value extends Function {
  String getSymbol();
}
